--- a/kubernetes/apps/database/crunchy-postgres-operator/cluster/postgrescluster.yaml
+++ b/kubernetes/apps/database/crunchy-postgres-operator/cluster/postgrescluster.yaml
@@ -99,12 +99,6 @@ spec:
   #       name: repo1
   #       s3: *minio
 
-  # monitoring:
-  #   pgmonitor:
-  #     exporter:
-  #       resources:
-  #         requests:
-  #           cpu: 10m
-  #           memory: 64M
-  #         limits:
-  #           memory: 512M
+  monitoring:
+    pgmonitor:
+      exporter: {}
