--- a/kubernetes/apps/rook-ceph/rook-ceph/app/helmrelease.yaml
+++ b/kubernetes/apps/rook-ceph/rook-ceph/app/helmrelease.yaml
@@ -4,15 +4,11 @@ apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: rook-ceph
-spec:  
+spec:
   interval: 30m
-  chart:
-    spec:
-      chart: rook-ceph
-      version: v1.16.6
-      sourceRef:
-        kind: HelmRepository
-        name: rook-ceph
+  chartRef:
+    kind: OCIRepository
+    name: rook-ceph
   install:
     remediation:
       retries: 3
@@ -21,7 +17,7 @@ spec:
       retries: 3
   values:
     image:
-      repository: ghcr.io/rook/ceph  
-  
+      repository: ghcr.io/rook/ceph
+
     monitoring:
       enabled: true
