--- a/kubernetes/apps/system-upgrade/system-upgrade-controller/app/kustomization.yaml
+++ b/kubernetes/apps/system-upgrade/system-upgrade-controller/app/kustomization.yaml
@@ -5,6 +5,7 @@ kind: Kustomization
 resources:
   # renovate: datasource=github-releases depName=rancher/system-upgrade-controller
   - https://github.com/rancher/system-upgrade-controller/releases/download/v0.15.2/system-upgrade-controller.yaml
+  - ./rbac.yaml
 patchesStrategicMerge:
   - |
     $patch: delete
