--- a/kubernetes/apps/system-upgrade/system-upgrade-controller/ks.yaml
+++ b/kubernetes/apps/system-upgrade/system-upgrade-controller/ks.yaml
@@ -30,7 +30,7 @@ spec:
   dependsOn:
     - name: system-upgrade-controller
       namespace: system-upgrade
-  path: ./kubernetes/ap ps/system-upgrade/system-upgrade-controller/plans
+  path: ./kubernetes/apps/system-upgrade/system-upgrade-controller/plans
   prune: true
   sourceRef:
     kind: GitRepository
