feat(postgres): HA mode

--- a/kubernetes/apps/database/crunchy-postgres-operator/cluster/postgrescluster.yaml
+++ b/kubernetes/apps/database/crunchy-postgres-operator/cluster/postgrescluster.yaml
@@ -8,6 +8,7 @@ spec:
 
   instances:
     - name: postgres
+      replicas: 2
       dataVolumeClaimSpec:
         storageClassName: openebs-hostpath
         accessModes:
