--- a/kubernetes/apps/database/crunchy-postgres-operator/cluster/postgrescluster.yaml
+++ b/kubernetes/apps/database/crunchy-postgres-operator/cluster/postgrescluster.yaml
@@ -72,6 +72,11 @@ spec:
                 matchLabels:
                   postgres-operator.crunchydata.com/cluster: *name
                   postgres-operator.crunchydata.com/role: pgbouncer
+      service:
+        type: LoadBalancer
+        metadata:
+          annotations:
+            lbipam.cilium.io/ips: 192.168.0.42
 
   users:
     # Superuser
