--- a/kubernetes/apps/database/crunchy-postgres-operator/cluster/postgrescluster.yaml
+++ b/kubernetes/apps/database/crunchy-postgres-operator/cluster/postgrescluster.yaml
@@ -81,6 +81,9 @@ spec:
   users:
     # Superuser
     - name: postgres
+      databases:
+        - postgres
+      options: "SUPERUSER"
       password:
         type: AlphaNumeric
     # Applications
