feat(postgres): encrypt backups

--- a/kubernetes/apps/database/crunchy-postgres-operator/cluster/externalsecret.yaml
+++ b/kubernetes/apps/database/crunchy-postgres-operator/cluster/externalsecret.yaml
@@ -17,6 +17,7 @@ spec:
           [global]
           repo1-s3-key={{ .MINIO_ROOT_USER }}
           repo1-s3-key-secret={{ .MINIO_ROOT_PASSWORD }}
+          repo1-cipher-pass={{ .POSTGRESQL_BACKUP_ENCRYPTION_CIPHER_PASS }}
   data:
     - secretKey: MINIO_ROOT_USER
       remoteRef:
@@ -24,3 +25,6 @@ spec:
     - secretKey: MINIO_ROOT_PASSWORD
       remoteRef:
         key: MINIO_ROOT_PASSWORD
+    - secretKey: POSTGRESQL_BACKUP_ENCRYPTION_CIPHER_PASS
+      remoteRef:
+        key: POSTGRESQL_BACKUP_ENCRYPTION_CIPHER_PASS
