feat(postgres): backup to cloudflare r2

--- a/kubernetes/apps/database/crunchy-postgres-operator/cluster/externalsecret.yaml
+++ b/kubernetes/apps/database/crunchy-postgres-operator/cluster/externalsecret.yaml
@@ -18,6 +18,9 @@ spec:
           repo1-s3-key={{ .MINIO_ROOT_USER }}
           repo1-s3-key-secret={{ .MINIO_ROOT_PASSWORD }}
           repo1-cipher-pass={{ .POSTGRESQL_BACKUP_ENCRYPTION_CIPHER_PASS }}
+          repo2-s3-key={{ .POSTGRESQL_R2_ACCESS_KEY }}
+          repo2-s3-key-secret={{ .POSTGRESQL_R2_ACCESS_KEY_SECRET }}
+          repo2-cipher-pass={{ .POSTGRESQL_BACKUP_ENCRYPTION_CIPHER_PASS }}
   data:
     - secretKey: MINIO_ROOT_USER
       remoteRef:
@@ -28,3 +31,9 @@ spec:
     - secretKey: POSTGRESQL_BACKUP_ENCRYPTION_CIPHER_PASS
       remoteRef:
         key: POSTGRESQL_BACKUP_ENCRYPTION_CIPHER_PASS
+    - secretKey: POSTGRESQL_R2_ACCESS_KEY
+      remoteRef:
+        key: POSTGRESQL_R2_ACCESS_KEY
+    - secretKey: POSTGRESQL_R2_ACCESS_KEY_SECRET
+      remoteRef:
+        key: POSTGRESQL_R2_ACCESS_KEY_SECRET
