fix(postgres): fix postgres exporter scraping

--- a/kubernetes/apps/database/crunchy-postgres-operator/cluster/postgrescluster.yaml
+++ b/kubernetes/apps/database/crunchy-postgres-operator/cluster/postgrescluster.yaml
@@ -107,8 +107,8 @@ spec:
   users:
     # Superuser
     - name: postgres
-      databases:
-        - postgres
+      # databases:
+      #   - postgres
       options: "SUPERUSER"
       password:
         type: AlphaNumeric
