chore(postgres): reproduce exporter issue

--- a/kubernetes/apps/database/crunchy-postgres-operator/cluster/kustomization.yaml
+++ b/kubernetes/apps/database/crunchy-postgres-operator/cluster/kustomization.yaml
@@ -6,4 +6,5 @@ resources:
   - ./externalsecret.yaml
   - ./podmonitor.yaml
   - ./postgrescluster.yaml
+  - ./postgrescluster2.yaml
   - ./prometheusrule.yaml
