feat(openebs): enable xfs quota

--- a/kubernetes/apps/openebs/openebs/app/helmrelease.yaml
+++ b/kubernetes/apps/openebs/openebs/app/helmrelease.yaml
@@ -37,5 +37,8 @@ spec:
           keep: false
 
     localpv-provisioner:
+      hostpathClass:
+        xfsQuota:
+          enabled: true
       analytics:
         enabled: false
