--- a/kubernetes/apps/external-secrets/external-secrets/stores/clustersecretstore.yaml
+++ b/kubernetes/apps/external-secrets/external-secrets/stores/clustersecretstore.yaml
@@ -23,3 +23,24 @@ spec:
         key: ca.crt
       organizationID: 2dc9d718-ad6b-4040-b629-b27a014c7d32
       projectID: 0221419c-7212-4b53-8df8-b27a014f1c20
+---
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/external-secrets.io/clustersecretstore_v1beta1.json
+apiVersion: external-secrets.io/v1beta1
+kind: ClusterSecretStore
+metadata:
+  name: postgres-secrets-store
+spec:
+  provider:
+    kubernetes:
+      remoteNamespace: database
+      server:
+        url: https://kubernetes.default.svc.cluster.local
+        caProvider:
+          type: ConfigMap
+          name: kube-root-ca.crt
+          namespace: external-secrets
+          key: ca.crt
+      auth:
+        serviceAccount:
+          name: external-secrets-postgres
+          namespace: external-secrets
