--- a/kubernetes/apps/database/crunchy-postgres-operator/clustersecretstore/rbac.yaml
+++ b/kubernetes/apps/database/crunchy-postgres-operator/clustersecretstore/rbac.yaml
@@ -31,7 +31,7 @@ metadata:
 subjects:
   - kind: ServiceAccount
     name: external-secrets-postgres
-    namespace: external-secrets
+    namespace: database
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
