--- a/kubernetes/apps/networking/ingress-nginx/app/helmrelease.yaml
+++ b/kubernetes/apps/networking/ingress-nginx/app/helmrelease.yaml
@@ -23,6 +23,7 @@ spec:
     controller:
       config:
         enable-real-ip: "true"
+        use-forwarded-headers: "true"
       service:
         annotations:
           lbipam.cilium.io/ips: 192.168.0.40
