--- a/kubernetes/apps/networking/ingress-nginx/app/helmrelease.yaml
+++ b/kubernetes/apps/networking/ingress-nginx/app/helmrelease.yaml
@@ -25,7 +25,7 @@ spec:
         enable-real-ip: "true"
         use-forwarded-headers: "true"
         log-format-escape-json: "true"
-        log-format-upstream: >
+        log-format-upstream: >-
           {"time": "$time_iso8601", "remote_addr": "$proxy_protocol_addr",
           "x_forwarded_for": "$proxy_add_x_forwarded_for", "request_id": "$req_id",
           "remote_user": "$remote_user", "bytes_sent": $bytes_sent, "request_time": $request_time,
