chore(grafana): add grafana postgres secret

--- a/kubernetes/apps/monitoring/grafana/app/externalsecret.yaml
+++ b/kubernetes/apps/monitoring/grafana/app/externalsecret.yaml
@@ -22,3 +22,23 @@ spec:
     - secretKey: GRAFANA_ADMIN_PASSWORD
       remoteRef:
         key: GRAFANA_ADMIN_PASSWORD
+---
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/external-secrets.io/externalsecret_v1beta1.json
+apiVersion: external-secrets.io/v1beta1
+kind: ExternalSecret
+metadata:
+  name: grafana-postgres-credentials
+spec:
+  secretStoreRef:
+    kind: ClusterSecretStore
+    name: postgres-secrets-store
+  target:
+    name: grafana-postgres-credentials
+    template:
+      engineVersion: v2
+      data:
+        GF_DATABASE_TYPE: postgres
+        GF_DATABASE_HOST: "{{ .pgbouncer-host }}"
+  dataFrom:
+    - extract:
+        key: postgres-pguser-grafana
