--- a/kubernetes/apps/monitoring/grafana/app/externalsecret.yaml
+++ b/kubernetes/apps/monitoring/grafana/app/externalsecret.yaml
@@ -38,7 +38,8 @@ spec:
       engineVersion: v2
       data:
         GF_DATABASE_TYPE: postgres
-        GF_DATABASE_HOST: "{{ .pgbouncer-host }}"
+        GF_DATABASE_USER: " {{ .user }}"
+        # GF_DATABASE_HOST: "{{ .pgbouncer-host }}"
   dataFrom:
     - extract:
         key: postgres-pguser-grafana
