chore(grafana): test eso rewrite

--- a/kubernetes/apps/monitoring/grafana/app/externalsecret.yaml
+++ b/kubernetes/apps/monitoring/grafana/app/externalsecret.yaml
@@ -38,8 +38,12 @@ spec:
       engineVersion: v2
       data:
         GF_DATABASE_TYPE: postgres
-        GF_DATABASE_USER: " {{ .user }}"
-        # GF_DATABASE_HOST: "{{ .pgbouncer-host }}"
+        GF_DATABASE_HOST: "{{ .pgbouncer_host }}"
+        GF_DATABASE_USER: "{{ .user }}"
   dataFrom:
     - extract:
         key: postgres-pguser-grafana
+      rewrite:
+        - regexp:
+            source: "[^a-zA-Z0-9 -]"
+            target: "_"
