chore(grafana): test eso rewrite

--- a/kubernetes/apps/monitoring/grafana/app/externalsecret.yaml
+++ b/kubernetes/apps/monitoring/grafana/app/externalsecret.yaml
@@ -45,5 +45,5 @@ spec:
         key: postgres-pguser-grafana
       rewrite:
         - regexp:
-            source: "[^a-zA-Z0-9 ]"
+            source: "-"
             target: "_"
