feat(grafana): connect to postgres db

--- a/kubernetes/apps/monitoring/grafana/app/externalsecret.yaml
+++ b/kubernetes/apps/monitoring/grafana/app/externalsecret.yaml
@@ -27,19 +27,18 @@ spec:
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: grafana-postgres-credentials
+  name: grafana-postgres-configuration
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: postgres-secrets-store
   target:
-    name: grafana-postgres-credentials
+    name: grafana-postgres-configuration
     template:
       engineVersion: v2
       data:
         GF_DATABASE_TYPE: postgres
-        GF_DATABASE_HOST: "{{ .pgbouncer_host }}"
-        GF_DATABASE_USER: "{{ .user }}"
+        GF_DATABASE_URL: "{{ .pgbouncer_uri }}"
   dataFrom:
     - extract:
         key: postgres-pguser-grafana
