--- a/kubernetes/apps/monitoring/grafana/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/grafana/app/helmrelease.yaml
@@ -1,3 +1,4 @@
+---
 # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/helm.toolkit.fluxcd.io/helmrelease_v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
@@ -17,6 +18,9 @@ spec:
   values:
     admin:
       existingSecret: grafana-admin
+
+    envFromSecrets:
+      - name: grafana-postgres-configuration
 
     dashboardProviders:
       dashboardproviders.yaml:
