--- a/kubernetes/apps/monitoring/grafana/app/externalsecret.yaml
+++ b/kubernetes/apps/monitoring/grafana/app/externalsecret.yaml
@@ -42,6 +42,7 @@ spec:
         GF_DATABASE_NAME: "{{ .dbname }}"
         GF_DATABASE_USER: "{{ .user }}"
         GF_DATABASE_PASSWORD: "{{ .password }}"
+        GF_DATABASE_SSL_MODE: disable
   dataFrom:
     - extract:
         key: postgres-pguser-grafana
