fix(grafana): skip pgbouncer

--- a/kubernetes/apps/monitoring/grafana/app/externalsecret.yaml
+++ b/kubernetes/apps/monitoring/grafana/app/externalsecret.yaml
@@ -38,7 +38,7 @@ spec:
       engineVersion: v2
       data:
         GF_DATABASE_TYPE: postgres
-        GF_DATABASE_HOST: "{{ .pgbouncer_host }}:{{ .pgbouncer_port }}"
+        GF_DATABASE_HOST: "{{ .host }}:{{ .port }}"
         GF_DATABASE_NAME: "{{ .dbname }}"
         GF_DATABASE_USER: "{{ .user }}"
         GF_DATABASE_PASSWORD: "{{ .password }}"
