fix(grafana): use pgbouncer

--- a/kubernetes/apps/monitoring/grafana/app/externalsecret.yaml
+++ b/kubernetes/apps/monitoring/grafana/app/externalsecret.yaml
@@ -38,12 +38,11 @@ spec:
       engineVersion: v2
       data:
         GF_DATABASE_TYPE: postgres
-        GF_DATABASE_HOST: "{{ .host }}:{{ .port }}"
+        GF_DATABASE_HOST: "{{ .pgbouncer_host }}:{{ .pgbouncer_port }}"
         GF_DATABASE_NAME: "{{ .dbname }}"
         GF_DATABASE_USER: "{{ .user }}"
         GF_DATABASE_PASSWORD: "{{ .password }}"
         GF_DATABASE_SSL_MODE: require
-        DATABASE_SSL_MODE: disable
   dataFrom:
     - extract:
         key: postgres-pguser-grafana
