feat(cilium): enable hubble ingress

--- a/kubernetes/apps/kube-system/cilium/app/helm-values.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/helm-values.yaml
@@ -40,3 +40,11 @@ hubble:
     enabled: true
   ui:
     enabled: true
+    ingress:
+      enabled: true
+      className: nginx
+      hosts:
+        - hubble.nasenov.dev
+      tls:
+        - hosts:
+            - hubble.nasenov.dev
