--- a/kubernetes/apps/kube-system/cilium/app/helm-values.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/helm-values.yaml
@@ -28,16 +28,30 @@ k8sServiceHost: localhost
 k8sServicePort: 7445
 l2announcements:
   enabled: true
-# https://github.com/cilium/cilium/issues/28549
 operator:
+  prometheus:
+    enabled: true
+    serviceMonitor:
+      enabled: true
+  dashboards:
+    enabled: true
+  # https://github.com/cilium/cilium/issues/28549
   tolerations:
     - key: node.kubernetes.io/not-ready
       effect: NoSchedule
     - key: node-role.kubernetes.io/control-plane
       effect: NoSchedule
 hubble:
+  metrics:
+    enabled: "{dns,drop,tcp,flow,port-distribution,icmp,httpV2:exemplars=true;labelsContext=source_ip\\,source_namespace\\,source_workload\\,destination_ip\\,destination_namespace\\,destination_workload\\,traffic_direction}"
+    dashboards:
+      enabled: true
   relay:
     enabled: true
+    prometheus:
+      enabled: true
+      serviceMonitor:
+        enabled: true
   ui:
     enabled: true
     ingress:
@@ -48,3 +62,14 @@ hubble:
       tls:
         - hosts:
             - hubble.nasenov.dev
+prometheus:
+  enabled: true
+  serviceMonitor:
+    enabled: true
+dashboards:
+  enabled: true
+envoy:
+  prometheus:
+    enabled: true
+    serviceMonitor:
+      enabled: true
