--- a/kubernetes/apps/monitoring/grafana/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/grafana/app/helmrelease.yaml
@@ -123,6 +123,14 @@ spec:
             editable: true
             options:
               path: /var/lib/grafana/dashboards/postgresql
+          - name: cilium
+            orgId: 1
+            folder: Cilium
+            type: file
+            disableDeletion: false
+            editable: true
+            options:
+              path: /var/lib/grafana/dashboards/cilium
 
     dashboards:
       default:
@@ -226,6 +234,9 @@ spec:
         label: grafana_dashboard
         labelValue: ""
         searchNamespace: ALL
+        folderAnnotation: grafana_folder
+        provider:
+          foldersFromFilesStructure: true
       datasources:
         enabled: true
         label: grafana_datasource
