--- a/kubernetes/apps/kube-system/cilium/config/kustomization.yaml
+++ b/kubernetes/apps/kube-system/cilium/config/kustomization.yaml
@@ -3,4 +3,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - ./certificate.yaml
+  - ./internal.yaml
   - ./l2.yaml
+  - ./redirect.yaml
