--- a/kubernetes/apps/default/autobrr/app/helmrelease.yaml
+++ b/kubernetes/apps/default/autobrr/app/helmrelease.yaml
@@ -64,16 +64,15 @@ spec:
           http:
             port: *port
 
-    ingress:
+    route:
       app:
-        className: nginx
-        hosts:
-          - host: autobrr.nasenov.dev
-            paths:
-              - path: /
-                pathType: Prefix
-                service:
-                  identifier: app
-        tls:
-          - hosts:
-              - autobrr.nasenov.dev
+        hostnames: 
+          - autobrr.nasenov.dev
+        parentRefs:
+          - name: internal
+            namespace: kube-system
+            sectionName: https
+        rules:
+          - backendRefs:
+              - name: autobrr
+                port: *port
