--- a/kubernetes/apps/default/prowlarr/app/helmrelease.yaml
+++ b/kubernetes/apps/default/prowlarr/app/helmrelease.yaml
@@ -63,16 +63,15 @@ spec:
             port: 80
             targetPort: 9696
 
-    ingress:
+    route:
       app:
-        className: nginx
-        hosts:
-          - host: prowlarr.nasenov.dev
-            paths:
-              - path: /
-                pathType: Prefix
-                service:
-                  identifier: app
-        tls:
-          - hosts:
-              - prowlarr.nasenov.dev
+        hostnames:
+          - prowlarr.nasenov.dev
+        parentRefs:
+          - name: internal
+            namespace: kube-system
+            sectionName: https
+        rules:
+          - backendRefs:
+              - name: prowlarr
+                port: 80
