--- a/kubernetes/apps/default/radarr/app/helmrelease.yaml
+++ b/kubernetes/apps/default/radarr/app/helmrelease.yaml
@@ -63,19 +63,18 @@ spec:
             port: 80
             targetPort: 7878
 
-    ingress:
+    route:
       app:
-        className: nginx
-        hosts:
-          - host: radarr.nasenov.dev
-            paths:
-              - path: /
-                pathType: Prefix
-                service:
-                  identifier: app
-        tls:
-          - hosts:
-              - radarr.nasenov.dev
+        hostnames:
+          - radarr.nasenov.dev
+        parentRefs:
+          - name: internal
+            namespace: kube-system
+            sectionName: https
+        rules:
+          - backendRefs:
+              - name: radarr
+                port: 80
 
     persistence:
       media:
