--- a/kubernetes/apps/default/zigbee2mqtt/app/helmrelease.yaml
+++ b/kubernetes/apps/default/zigbee2mqtt/app/helmrelease.yaml
@@ -63,20 +63,19 @@ spec:
         ports:
           http:
             port: 8080
-  
-    ingress:
+
+    route:
       app:
-        className: nginx
-        hosts:
-          - host: zigbee.nasenov.dev
-            paths:
-              - path: /
-                pathType: Prefix
-                service:
-                  identifier: app
-        tls:
-          - hosts:
-              - zigbee.nasenov.dev
+        hostnames:
+          - zigbee.nasenov.dev
+        parentRefs:
+          - name: internal
+            namespace: kube-system
+            sectionName: https
+        rules:
+          - backendRefs:
+              - name: zigbee2mqtt
+                port: 8080
 
     defaultPodOptions:
       affinity:
