--- a/kubernetes/apps/storage/minio/app/helmrelease.yaml
+++ b/kubernetes/apps/storage/minio/app/helmrelease.yaml
@@ -46,24 +46,29 @@ spec:
           s3:
             port: 9000
 
-    ingress:
+    route:
       app:
-        annotations:
-          nginx.ingress.kubernetes.io/proxy-body-size: 8m
-        className: nginx
-        hosts:
-          - host: minio.nasenov.dev
-            paths:
-              - path: /
-                service:
-                  identifier: app
-                  port: http
-          - host: s3.nasenov.dev
-            paths:
-              - path: /
-                service:
-                  identifier: app
-                  port: s3
+        hostnames:
+          - minio.nasenov.dev
+        parentRefs:
+          - name: internal
+            namespace: kube-system
+            sectionName: https
+        rules:
+          - backendRefs:
+              - name: minio
+                port: 9090
+      s3:
+        hostnames:
+          - s3.nasenov.dev
+        parentRefs:
+          - name: internal
+            namespace: kube-system
+            sectionName: https
+        rules:
+          - backendRefs:
+              - name: minio
+                port: 9000
 
     persistence:
       config:
