--- a/kubernetes/apps/kube-system/cilium/config/httproute.yaml
+++ b/kubernetes/apps/kube-system/cilium/config/httproute.yaml
@@ -27,7 +27,7 @@ spec:
   parentRefs:
     - name: internal
       namespace: kube-system
-      sectionName: http
+      sectionName: https
   rules:
     - backendRefs:
         - name: hubble-ui
