--- a/kubernetes/apps/default/zigbee2mqtt/app/externalsecret.yaml
+++ b/kubernetes/apps/default/zigbee2mqtt/app/externalsecret.yaml
@@ -1,6 +1,6 @@
 ---
-# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/external-secrets.io/externalsecret_v1beta1.json
-apiVersion: external-secrets.io/v1beta1
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/external-secrets.io/externalsecret_v1.json
+apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
   name: zigbee2mqtt
@@ -19,8 +19,8 @@ spec:
       remoteRef:
         key: ZIGBEE2MQTT_CONFIG_ADVANCED_NETWORK_KEY
 ---
-# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/external-secrets.io/externalsecret_v1beta1.json
-apiVersion: external-secrets.io/v1beta1
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/external-secrets.io/externalsecret_v1.json
+apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
   name: zigbee2mqtt-volsync
