--- a/kubernetes/apps/networking/cloudflare-tunnel/app/helmrelease.yaml
+++ b/kubernetes/apps/networking/cloudflare-tunnel/app/helmrelease.yaml
@@ -39,6 +39,7 @@ spec:
               TUNNEL_ORIGIN_ENABLE_HTTP2: true
               TUNNEL_POST_QUANTUM: true
               TUNNEL_TRANSPORT_PROTOCOL: quic
+              TUNNEL_LOGLEVEL: debug
             envFrom:
               - secretRef:
                   name: cloudflare-tunnel-secret
