fix(cloudflared): fix token

--- a/kubernetes/apps/networking/cloudflare-tunnel/app/externalsecret.yaml
+++ b/kubernetes/apps/networking/cloudflare-tunnel/app/externalsecret.yaml
@@ -12,8 +12,10 @@ spec:
     name: cloudflare-tunnel-secret
     template:
       data:
-        TUNNEL_TOKEN: |
-          {{ toJson (dict "a" .CLOUDFLARE_ACCOUNT_TAG "t" .CLOUDFLARE_TUNNEL_ID "s" .CLOUDFLARE_TUNNEL_SECRET) | b64enc }}
+        TUNNEL_TOKEN: "{{ .CLOUDFLARE_TUNNEL_SECRET }}"
+
+        # TUNNEL_TOKEN: |
+        #   {{ toJson (dict "a" .CLOUDFLARE_ACCOUNT_TAG "t" .CLOUDFLARE_TUNNEL_ID "s" .CLOUDFLARE_TUNNEL_SECRET) | b64enc }}
   data:
     - secretKey: CLOUDFLARE_ACCOUNT_TAG
       remoteRef:
